tests/samples/invalid/expression_as_type.pn
const X: i32 = 100;
const Y: |X| = 200;
const Z: i32 = 300;
